--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,8 @@
     </form>
   </nav>
   <!--Navbar End-->
+  <!doctype html>
+
   <img class="header_img mx-auto d-block" src="{{url_for('static', filename='images/catbook_logo.jpg')}}">
   <div class="row">
       {% for cat in cats%}
@@ -36,13 +38,14 @@
                   <h5 class="card-title">{{cat.name}}</h5>
                   <p class="card-text">Votes: 0</p>
                   <a href="cats/{{cat.id}}" class="btn btn-primary">View details</a>
+                  <a href="cats/" class="btn btn-primary">add cat</a>
                 </div>
               </div>
         </div>
       </div>
       {% endfor%}
     </div>
-  
+    <!doctype html>
   <!--BOOTSTRAP Javascript import-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
